# moisture-sensor-server

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  alert_service.py  app.py  autoreload.py  db.py  db_setup.py  docker-compose-migrations.yml  docker-compose.yml  http-requests.http  models.py  pyproject.toml  requests.db  routes.py  settings.py  start.sh  utils.py
alembic/: env.py
alembic/versions/: 1621f5cc19c6_removed_id_as_required_from_sensor_data.py  326ff30f90b3_init.py  370a509004a4_fix_time.py  689f53bef6c2_added_battery_value.py  86a278607435_add_tzinfo_to_created_at.py  af0c79009f09_add_status_column.py  c39d1f45fd2f_removed_id_as_required_from_sensor_data_.py  cac48466329b_change_created_at_to_datetime.py  d01f4b43605d_init.py  dfcb69dd9724_init.py  e23a238ad785_add_active_column.py  edb2b8c85bcf_add_tzinfo_to_created_at.py
db/: requests.db
sensor_code/: boot.py  boot_out.txt  code.py  config.py  cpy_setup.py  enums.py  hygrostation.py  i2c.py  ioregistry.py  log.py  settings.toml  sleep.py  soilstation.py  transmit.py
server/: run_alert_service.sh  run_api.sh  run_auto_migrations.sh
