[tool.poetry]
name = "moisture-sensor-server"
version = "0.1.0"
description = "A FastAPI project that logs incoming requests to an SQLite database."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.22.0"
SQLAlchemy = "^2.0.0"
aiosqlite = "^0.18.0"
shortuuid = "^1.0.13"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
